# linkedAI-bot

./: .gitignore  Project Details.md  README.md  pyproject.toml  requirements.txt
api/: index.py
src/linkedin_posting_bot/: crew.py  main.py
src/linkedin_posting_bot/config/: agents.yaml  tasks.yaml
src/linkedin_posting_bot/tools/: linkedin_post.py  refresh_token.py
